--- a/View/src/main/resources/pl/comp/view/GameView.fxml
+++ b/View/src/main/resources/pl/comp/view/GameView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -151,6 +152,11 @@
                 </Button>
             </children>
         </Pane>
+      <Label fx:id="winLabel" layoutX="822.0" layoutY="113.0" text="Brawo! Dobre rozwiązanie." visible="false">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Label>
     </children>
     <effect>
         <DropShadow height="60.0" radius="29.5" width="60.0" />
