--- a/View/src/main/resources/pl/comp/view/MenuView.fxml
+++ b/View/src/main/resources/pl/comp/view/MenuView.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.effect.DropShadow?>
@@ -15,39 +14,40 @@
         <DropShadow height="60.0" radius="29.5" width="60.0" />
     </effect>
     <children>
-        <Label fx:id="welcomeText" layoutX="376.0" layoutY="150.0" text="Witaj w grze Sudoku!">
+        <Label fx:id="welcomeText" alignment="CENTER" contentDisplay="CENTER" layoutX="173.0" layoutY="165.0" prefHeight="70.0" prefWidth="854.0" text="%welcomeText">
             <font>
                 <Font size="48.0" />
             </font>
         </Label>
         <Pane layoutX="166.0" layoutY="363.0" prefHeight="200.0" prefWidth="420.0">
             <children>
-                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="14.0" text="Wybierz poziom trudności">
+                <Label fx:id="choiceLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="14.0" text="%choiceLabel">
                     <font>
                         <Font size="27.0" />
                     </font>
                 </Label>
-                <RadioButton fx:id="easyButton" contentDisplay="CENTER" layoutX="14.0" layoutY="83.0" mnemonicParsing="false" onAction="#onEasyButtonClick" selected="true" text="Łatwy" textAlignment="CENTER">
+                <RadioButton fx:id="easyButton" contentDisplay="CENTER" layoutX="14.0" layoutY="83.0" mnemonicParsing="false" onAction="#onEasyButtonClick" selected="true" text="%easy" textAlignment="CENTER">
                     <font>
                         <Font size="24.0" />
                     </font>
                 </RadioButton>
-                <RadioButton fx:id="normalButton" contentDisplay="CENTER" layoutX="137.0" layoutY="83.0" mnemonicParsing="false" onAction="#onNormalButtonClick" text="Normalny" textAlignment="CENTER">
+                <RadioButton fx:id="normalButton" contentDisplay="CENTER" layoutX="137.0" layoutY="83.0" mnemonicParsing="false" onAction="#onNormalButtonClick" text="%medium" textAlignment="CENTER">
                     <font>
                         <Font size="24.0" />
                     </font>
                 </RadioButton>
-                <RadioButton fx:id="hardButton" contentDisplay="CENTER" layoutX="292.0" layoutY="83.0" mnemonicParsing="false" onAction="#onHardButtonClick" text="Trudny" textAlignment="CENTER">
+                <RadioButton fx:id="hardButton" contentDisplay="CENTER" layoutX="292.0" layoutY="83.0" mnemonicParsing="false" onAction="#onHardButtonClick" text="%hard" textAlignment="CENTER">
                     <font>
                         <Font size="24.0" />
                     </font>
                 </RadioButton>
             </children>
         </Pane>
-        <Button fx:id="playButton" layoutX="748.0" layoutY="380.0" mnemonicParsing="false" onAction="#onPlayButtonClicked" text="Graj">
+        <Button fx:id="playButton" layoutX="748.0" layoutY="380.0" mnemonicParsing="false" onAction="#onPlayButtonClicked" text="%playButton">
             <font>
                 <Font size="49.0" />
             </font>
         </Button>
+      <ChoiceBox fx:id="languageChoice" layoutX="994.0" layoutY="43.0" prefWidth="150.0" />
     </children>
 </AnchorPane>
