--- a/View/src/main/resources/pl/comp/view/GameView.fxml
+++ b/View/src/main/resources/pl/comp/view/GameView.fxml
@@ -52,9 +52,9 @@
             <Pane style="-fx-border-color: BLACK; -fx-border-width: 1.5;" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="3" />
          </children>
         </GridPane>
-        <Pane fx:id="keyPad" layoutX="800.0" layoutY="220.0" prefHeight="360.0" prefWidth="360.0">
+        <Pane layoutX="800.0" layoutY="220.0" prefHeight="360.0" prefWidth="360.0">
             <children>
-                <Button fx:id="oneButton" contentDisplay="CENTER" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonOne" prefHeight="80.0" prefWidth="80.0" text="1" textAlignment="CENTER">
+                <Button contentDisplay="CENTER" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonOne" prefHeight="80.0" prefWidth="80.0" text="1" textAlignment="CENTER">
                     <font>
                         <Font name="System Bold" size="36.0" />
                     </font>
@@ -66,7 +66,7 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button fx:id="twoButton" contentDisplay="CENTER" layoutX="140.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonTwo" prefHeight="80.0" prefWidth="80.0" text="2" textAlignment="CENTER">
+                <Button contentDisplay="CENTER" layoutX="140.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonTwo" prefHeight="80.0" prefWidth="80.0" text="2" textAlignment="CENTER">
                     <font>
                         <Font name="System Bold" size="36.0" />
                     </font>
@@ -78,7 +78,7 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button fx:id="threeButton" contentDisplay="CENTER" layoutX="250.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonThree" prefHeight="80.0" prefWidth="80.0" text="3" textAlignment="CENTER">
+                <Button contentDisplay="CENTER" layoutX="250.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleButtonThree" prefHeight="80.0" prefWidth="80.0" text="3" textAlignment="CENTER">
                     <font>
                         <Font name="System Bold" size="36.0" />
                     </font>
@@ -90,7 +90,7 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button fx:id="fourButton" contentDisplay="CENTER" layoutX="30.0" layoutY="140.0" mnemonicParsing="false" onAction="#handleButtonFour" prefHeight="80.0" prefWidth="80.0" text="4" textAlignment="CENTER">
+                <Button contentDisplay="CENTER" layoutX="30.0" layoutY="140.0" mnemonicParsing="false" onAction="#handleButtonFour" prefHeight="80.0" prefWidth="80.0" text="4" textAlignment="CENTER">
                     <font>
                         <Font name="System Bold" size="36.0" />
                     </font>
